# words-game-api

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 7f5e22e4876d_init.py
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  base_model.py  user_model.py
app/repositories/: user_repository.py
app/routes/: auth_route.py  healthmonitor_route.py
app/schemes/: tg_scheme.py  user_scheme.py
app/services/: auth_service.py  user_service.py
tests/repositories/: test_user_repository.py
tests/routes/: test_auth_route.py  test_healthmonitor_route.py
tests/services/: test_auth_service.py  test_user_service.py
