[project]
name = "words-game-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.127.0",
    "greenlet>=3.3.0",
    "alembic>=1.14.0",
    "sqlalchemy>=2.0.45",
]

[tool.uv.workspace]
members = [
    "venv",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pytest>=8.4.0",
]

[tool.pylint.messages_control]
disable = [
    "missing-function-docstring",
    "missing-module-docstring",
    "missing-class-docstring",
]

[tool.pytest.ini_options]
pythonpath = ["."]
